[project]
name = "twotowerneuralmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10, <3.12"
dependencies = [
    "datasets>=3.6.0",
    "gensim>=4.3.3",
    "matplotlib>=3.10.3",
    "numpy>=1.26.4",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
]
